# talos-core-rs

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  pyproject.toml
.agent/: README.md  test_manifest.yml
.agent/agents/design/: brand-guardian.md  ui-designer.md  ux-researcher.md  visual-storyteller.md  whimsy-injector.md
.agent/agents/engineering/: ai-engineer.md  backend-architect.md  devops-automator.md  frontend-developer.md  mobile-app-builder.md  rapid-prototyper.md
.agent/agents/marketing/: app-store-optimizer.md  content-creator.md  growth-hacker.md  instagram-curator.md  reddit-community-builder.md  tiktok-strategist.md  twitter-engager.md
.agent/agents/product/: feedback-synthesizer.md  sprint-prioritizer.md  trend-researcher.md
.agent/agents/project-management/: experiment-tracker.md  project-shipper.md  studio-producer.md
.agent/agents/studio-operations/: analytics-reporter.md  finance-tracker.md  infrastructure-maintainer.md  legal-compliance-checker.md  support-responder.md
.agent/agents/testing/: api-tester.md  performance-benchmarker.md  test-results-analyzer.md  tool-evaluator.md  workflow-optimizer.md
.agent/workflows/: README.md
.agent/workflows/development/: run-dashboard.md  tga-workflow.md  update-readme.md
.agent/workflows/style-guides/: readme-style.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  publish.yml  release-binaries.yml
.husky/: pre-commit
docs/wiki/: Architecture.md
examples/: cli.rs
scripts/: cleanup.sh  pre-commit.sh  start.sh  stop.sh  test.sh
src/: canonical.rs  crypto.rs  encoding.rs  errors.rs  lib.rs  ratchet.rs  wallet.rs
src/adapters/: crypto.rs  mod.rs  python.rs
src/domain/: mod.rs  ratchet.rs  wallet.rs
src/errors/: mod.rs
src/libs/: canonical.rs  lib.rs
src/ports/: crypto.rs
tests/: conformance.rs  crypto_test.rs  e2e.rs
tests/vectors/: roundtrip_basic.json
