[package]
name = "talos-core-rs"
version = "0.1.0"
edition = "2021"
description = "Talos Protocol Core Rust Kernel"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21"
uuid = { version = "1.7", features = ["v7"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
pyo3 = { version = "0.22", features = ["extension-module"] }
