[package]
name = "talos-core-rs"
version = "0.1.0"
edition = "2021"
description = "Talos Protocol Core Rust Kernel"

[lib]
name = "talos_core_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.21"
uuid = { version = "1.7", features = ["v7"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
pyo3 = { version = "0.22", features = ["extension-module"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
bs58 = "0.5"

[dev-dependencies]
hex = "0.4"
