[package]
name = "talos-core-rs"
version = "0.1.0"
edition = "2021"
description = "Talos Protocol Core Rust Kernel"
license = "MIT"
repository = "https://github.com/talosprotocol/talos-core-rs"
homepage = "https://talosprotocol.com"
keywords = ["blockchain", "cryptography", "protocol"]

[package.metadata.talos]
protocol_range = "^1.0.0"
contract_hash = "3gi_Ti6G17oMQabjDlVUXcfBqOjN4HswNdD4Lu0uyyI"
schedule_hash = "TUk4d-djKlVaeLHIF922mq_otmiMOlskHJBA_D23zIA"
features = ["ratchet"]
contracts_version = "1.0.0"

[lib]
name = "talos_core_rs"
path = "src/libs/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
base64 = "0.21"
uuid = { version = "1.7", features = ["v7"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
pyo3 = { version = "0.22", features = ["macros"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
bs58 = "0.5"
x25519-dalek = { version = "2.0", features = ["static_secrets", "serde"] }
hkdf = "0.12"
chacha20poly1305 = "0.10"
hmac = "0.12"

[dev-dependencies]
hex = "0.4"
